# burn-geometry-experiment

./: .gitignore  Cargo.toml  README.md
src/: data.rs  inference.rs  main.rs  model.rs  training.rs
src/data/: mod.rs  preprocess.rs
src/model/: decoder.rs  encoder.rs  loss.rs  mod.rs
