[package]
name = "burn-mnist"
version = "0.1.1"
edition = "2024"
description = "train a simple neural network on mnist dataset using burn."
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
# version = "0.19.0"
burn = {git = "https://github.com/tracel-ai/burn", branch = "main", features = ["train", "ndarray", "vulkan"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4.27"
nalgebra = "0.33.2"
ndarray = "0.16.1"
rand = "0.9.1"
serde_json = "1.0"
stl_io = "0.8.5"
