[package]
name = "burn-mnist"
version = "0.1.1"
edition = "2024"
description = "train a simple neural network on mnist dataset using burn."
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
burn = {version = "0.20.0", features = ["train", "ndarray", "vulkan"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4.27"
nalgebra = "0.34.0"
ndarray = "0.17.0"
rand = "0.9.1"
serde_json = "1.0"
stl_io = "0.10.0"
# vtk-rs = "0.3.0"
